--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "html-react-parser": "^1.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-scripts": "^5.0.0",
     "typescript": "^4.2.4",
     "web-vitals": "^2.1.2"
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.5",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
