--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "firebase": "^9.6.2",
     "html-react-parser": "^1.2.6",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
