--- a/.eslintrc
+++ b/.eslintrc
@@ -17,20 +17,24 @@
   },
   "extends": ["plugin:@typescript-eslint/recommended"],
   "rules": {
-    "quotes": [
-      "error",
-      "single",
-      {
-        "avoidEscape": true
-      }
-    ],
-    "max-len": ["error", 120],
-    "comma-dangle": ["error", "always-multiline"],
     "@typescript-eslint/ban-ts-comment": 2,
-    "@typescript-eslint/no-explicit-any": 2,
     "@typescript-eslint/explicit-module-boundary-types": 0,
-    "react/jsx-filename-extension": ["error", { "extensions": [".tsx", ".types", ".styles"] }],
+    "@typescript-eslint/indent": 0,
+    "@typescript-eslint/no-explicit-any": 2,
+    "camelcase": 2,
+    "comma-dangle": ["error", "always-multiline"],
+    "import/default": 0,
     "import/extensions": ["error", "never", { "svg": "always", "tsx": "never", "types": "never" }],
+    "import/named": 0,
+    "import/namespace": 0,
+    "import/no-anonymous-default-export": 2,
+    "import/no-cycle": 0,
+    "import/no-deprecated": 0,
+    "import/no-duplicates": 2,
+    "import/no-useless-path-segments": 2,
+    "import/no-named-as-default-member": 0,
+    "import/no-named-as-default": 0,
+    "import/no-unused-modules": 0,
     "import/order": [
       "error",
       {
@@ -42,23 +46,23 @@
         "newlines-between": "always"
       }
     ],
-    "import/no-duplicates": 2,
-    "import/no-useless-path-segments": 2,
     "import/prefer-default-export": 0,
-    "import/named": 0,
-    "import/namespace": 0,
-    "import/default": 0,
-    "import/no-named-as-default-member": 0,
-    "import/no-named-as-default": 0,
-    "import/no-cycle": 0,
-    "import/no-unused-modules": 0,
-    "import/no-deprecated": 0,
-    "@typescript-eslint/indent": 0,
-    "import/no-anonymous-default-export": 2,
-    "react-hooks/rules-of-hooks": 2,
-    "react-hooks/exhaustive-deps": ["error", { "additionalHooks": "(useMemoOne)" }],
-    "camelcase": 2,
+    "max-len": ["error", 120],
+    "no-nested-ternary": 2,
+    "padding-line-between-statements": [
+      "error",
+      { "blankLine": "always", "prev": "*", "next": "return" }
+    ],
     "prefer-destructuring": 2,
-    "no-nested-ternary": 2
+    "quotes": [
+      "error",
+      "single",
+      {
+        "avoidEscape": true
+      }
+    ],
+    "react/jsx-filename-extension": ["error", { "extensions": [".tsx", ".types", ".styles"] }],
+    "react-hooks/exhaustive-deps": ["error", { "additionalHooks": "(useMemoOne)" }],
+    "react-hooks/rules-of-hooks": 2
   }
 }
