--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "www",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
+  },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
